# mzip

./: .gitignore  README.md  ZIP_Extractor_Technical_Specification.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
debian/: changelog  control  copyright  rules  zipextractor.desktop
src/zipextractor/: __init__.py  __main__.py  app.py
src/zipextractor/core/: __init__.py  extraction.py  models.py  progress.py  validation.py
src/zipextractor/data/: style.css
src/zipextractor/gui/: __init__.py  main_window.py  workers.py
src/zipextractor/gui/widgets/: __init__.py  archive_inspector.py  archive_list.py  conflict_dialog.py  progress_dialog.py  settings_dialog.py
src/zipextractor/utils/: __init__.py  config.py  history.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py  test_extraction.py  test_models.py  test_progress.py  test_validation.py  test_workers.py
