[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipextractor"
version = "1.0.0"
description = "Modern ZIP archive extraction utility for Ubuntu Linux"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "ZIP Extractor Team"}
]
maintainers = [
    {name = "ZIP Extractor Team"}
]
keywords = ["zip", "archive", "extraction", "gtk", "gui", "ubuntu", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "black>=23.11.0",
]

[project.urls]
Homepage = "https://github.com/MANZOORAHMED611/mzip"
Documentation = "https://github.com/MANZOORAHMED611/mzip#readme"
Repository = "https://github.com/MANZOORAHMED611/mzip.git"
Issues = "https://github.com/MANZOORAHMED611/mzip/issues"

[project.scripts]
zipextractor = "zipextractor.__main__:main"

[project.gui-scripts]
zipextractor-gui = "zipextractor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zipextractor = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TC003",    # Move stdlib import to TYPE_CHECKING (Path used at runtime)
]

[tool.ruff.lint.isort]
known-first-party = ["zipextractor"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",   # Unused function argument (fixtures)
    "PLR2004",  # Magic value comparison in tests is OK
    "PLC0415",  # Import not at top level (TDD style - imports in tests)
    "SIM105",   # contextlib.suppress preference (explicit try/except clearer in tests)
    "F841",     # Local variable assigned but never used (test assertions)
    "RUF059",   # Unpacked variable never used (test assertions)
    "ERA001",   # Found commented-out code (test documentation)
    "PLR1714",  # Multiple comparisons (test readability)
]
"src/zipextractor/app.py" = [
    "E402",     # Import after gi.require_version (required for GTK)
    "ARG002",   # Unused method argument (GTK callbacks have fixed signatures)
    "PLC0415",  # Import not at top level (lazy imports for performance)
]
"src/zipextractor/gui/*.py" = [
    "E402",     # Import after gi.require_version (required for GTK)
    "ARG002",   # Unused method argument (GTK callbacks have fixed signatures)
    "PLC0415",  # Import not at top level (lazy imports for performance)
]
"src/zipextractor/__main__.py" = [
    "PLC0415",  # Import not at top level (lazy imports for fast --help)
]
"src/zipextractor/core/validation.py" = [
    "PLR0911",  # Too many return statements (validation needs early returns)
    "SIM105",   # contextlib.suppress preference (explicit try/except clearer)
]
"src/zipextractor/core/extraction.py" = [
    "PLR0911",  # Too many return statements (extraction has many exit points)
    "PLR0912",  # Too many branches (complex extraction logic)
    "PLR0915",  # Too many statements (extraction is inherently complex)
]

# Black configuration
[tool.black]
target-version = ["py310"]
line-length = 100

# Mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "gi",
    "gi.repository",
    "gi.repository.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "zipextractor.app",
    "zipextractor.gui.*",
]
# GTK classes are typed as Any since PyGObject lacks type stubs
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "zipextractor.__main__"
# GTK app.run() returns Any
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "zipextractor.core.extraction"
# The pause/cancel flags are checked in a loop but set externally by other threads
# mypy's flow analysis within extract() sees them as always False
warn_unreachable = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as performance benchmarks",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/zipextractor"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 85
show_missing = true
